# gen-archi

./: .gitignore  README.md  pyproject.toml
app/: README.md
app/backend/: Dockerfile  README.md  docker-compose.yml  list.csv  requirements.txt
app/backend/app/: main.py
app/frontend/: config.js  index.html  index.js
app/frontend/js/classes/: Invader.js
second_platform/: deploy.sh
second_platform/ansible/: hosts.yml
second_platform/ansible/back/: back.yml
second_platform/ansible/backup/: backup.sh  backup.yml
second_platform/ansible/front/: front.yml
second_platform/ansible/mariadb/: ansible.cfg  mariadb_setup.yml
second_platform/ansible/tasks/: main.yml
second_platform/ansible/vars/: main.yml
second_platform/terraform/: alb.tf  backend-cloud-init.yml  bastion-cloud-init.yml  certs.tf  db-cloud-init.yml  frontend-cloud-init.yml  instance.tf  keypair.tf  loadbalancers.tf  main.tf  network.tf  records.tf  secgroups.tf  vpc.tf
third_platform/: script.sh  terraform.tfvars  variables.tf  website.tf
third_platform/backend/: acm_certificates.tf  database.tf  gateway.tf  iam.tf  lambda.tf  main.tf  outputs.tf  provider.tf  route53.tf  security_group.tf  terraform.tfvars  variables.tf  vpc.tf  zone.tf
third_platform/dns_zone/: main.tf  outputs.tf  provider.tf  terraform.tfvars  variables.tf
third_platform/frontend/: provider.tf  terraform.tfvars  website.tf
third_platform/rds/: acm_certificates.tf  gateway.tf  iam.tf  lambda.tf  main.tf  outputs.tf  provider.tf  route53.tf  terraform.tfvars  test3.tf
third_platform/terraform/: main.tf  output.tf
(+30 files in other folders)
