[tool.poetry]
name = "GEN-ARCHI"
version = "0.0.1"
description = ""
authors = ["Milann Guitton <milann.guitton@epita.fr"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"

ansible = "5.*"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"

flake8 = "^3.9.1"
pytype = "^2022.10.13"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
